fixing mobile front page x alignments with nav

--- a/assets/scss/_main-custom.scss
+++ b/assets/scss/_main-custom.scss
@@ -303,7 +303,8 @@ p#name-line-3.active {
 #frontpage-mobile-nav {
 	border:none;
 	width:100%;
-	
+	padding-left:0;
+	padding-right:0;
 }
 #frontpage-mobile-navlist {
 	display:flex;
